--- a/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
+++ b/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
@@ -1,9 +1,7 @@
-
-\kapitel{In\,den\,Hallen\,\allowbreak des\,Bergkönigs}
-
 \platz
-\credit{Autor}{\emph{für den Ilaris-Abenteuer-Wettbewerb anonymisiert}
-}
+
+\credit{Autor}{Matthias Ott}
+
 \credit{Illustrationen}{\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}\\game-icons.net
 }
 \credit{\LaTeX-Klasse}{Lukas Ruhe}
@@ -11,13 +9,11 @@
 \credit{Mit Dank an}{Kilian Linder für konstruktives Feedback,\\ Xaver Stiensmeier für die Ausrichtung des Wettbewerbs und Odir Sensendengler\\ sowie die geduldige Testgruppe: Jascha, Gloria, Meike und Hannes
 }
 
-%\credit{Korrektorat}{Matthias Ott\\Tilmann Kircher}
-\lizenz
-
+\newpage
 \spaltenanfang
 
 
-\addcontentsline{toc}{section}{Einleitung\,für\,die\linebreak Spielleitung}
+\addcontentsline{toc}{section}{Einleitung\,für\,die\allowbreak\ Spielleitung}
 \section*{Einleitung für die Spielleitung}
 In diesem Abenteuer kann eine Gruppe in \textbf{Finsterkoppen},
 der Hauptstadt des Bergkönigreichs eines zwergischen Volkes im \textbf{Finsterkamm},
@@ -29,7 +25,7 @@ Während die Ergebnisse dieses Abenteuers in jüngeren Publikationen (wie \emph{
 Ich wollte daher die Möglichkeit bieten, die historische Entwicklung im Rahmen einer anderen Handlung miterleben zu können
 und dabei Orte und Figuren kennen zu lernen, die in später stattfindenden Abenteuern wieder eine Rolle spielen (können).
 
-Den Schauplatz Finsterkoppen und die Finsterkopp-Binge war schon im Computerspiel \emph{Sternenschweif} (Attic, 1994) zu erkunden. %, das ich vor etwa 20 Jahren das letzte Mal gespielt habe.
+Den Schauplatz \textbf{Finsterkoppen} und die \textbf{Finsterkopp-Binge} waren schon im Computerspiel \emph{Sternenschweif} (Attic, 1994) zu erkunden. %, das ich vor etwa 20 Jahren das letzte Mal gespielt habe.
 %Was mir davon noch in Erinnerung war, habe ich verarbeitet.
 Ich habe für den Anhang auf die Liste der Gebäude aus \link{https://www.kunar.eu/nlt/finsterkoppen.htm}{Kunars Reiseführer} zurückgegriffen.
 Die Idee von Rattengold als überschwerem 13.\,Unmetall haben Simon Schollenberger, Stefan Weber und Stefan Löffler für das Wettbewerbs-Abenteuer \enquote{\link{https://www.orkenspalter.de/filebase/index.php?file/53-totgeboren/}{Totgeboren}} entwickelt.
@@ -40,7 +36,7 @@ Auch wenn sie den Weg ins kanonische Aventurien noch nicht gefunden hat, habe ic
 Ich habe das Abenteuer in drei Akte unterteilt, die nach meiner Einschätzung jeweils eine bis zwei Stunden Spielzeit ergeben sollten.
 Sie bauen inhaltlich aufeinander auf.
 Neben den beschriebenen Schlüsselszenen kann Ihre Gruppe durch eigene Schwerpunktsetzungen die Handlung mitbestimmen -- beispielsweise,
-indem sie im ersten Akt mit der Bevölkerung von \textbf{Finsterkoppen} Handel treibt oder im zweiten Akt weitere Räumlichkeiten erkundet.
+indem sie im \emph{ersten Akt} mit der Bevölkerung von \textbf{Finsterkoppen} Handel treibt oder im \emph{zweiten Akt} weitere Räumlichkeiten erkundet.
 Wegen des beschränkten Platzes müssten Sie die dazugehörigen Szenen jedoch gemeinsam improvisieren.
 
 Zu Ihrer Orientierung ist zu Beginn jedes Aktes angegeben, welche Ziele die Gruppe hier verfolgen (und gegebenenfalls erreichen) sollte.
@@ -66,7 +62,7 @@ So kann es ihnen gelingen, während der Hochkönigwahl den Intriganten \textbf{B
 der diese zu seinen Gunsten beeinflussen wollte.
 
 \subsection{Was wird zum Spielen benötigt?}
-Für erfahrene Spielleitungen dürfte das Abenteuer selbst sowie die Ilaris-Regeln (im folgenden: \emph{Ilaris} und die entsprechende Seitenzahl) als Grundlage zur Gestaltung des Spielabends ausreichen.
+Für erfahrene Spielleitungen dürfte das Abenteuer selbst sowie die Ilaris-Regeln als Grundlage zur Gestaltung des Spielabends ausreichen.
 Wenn Sie mit der Welt Aventurien noch nicht viel Kontakt hatten, empfehle ich zur Vorbereitung den Band \emph{Angroschs Kinder} (Fanpro, 2005, im folgenden \emph{AK}).
 Dieser Band ist leider vergriffen und gebraucht kaum erhältlich.
 Günstiger ist \emph{Die Zwerge Aventuriens} (Schmidt Spiele, 1993, im folgenden \emph{DZA}) gebraucht zu bekommen,
@@ -82,8 +78,8 @@ Ich habe darauf verzichtet, eine Karte der Finsterkopp-Binge anzufertigen, weil 
 finden Sie in \textbf{Malatosch} (\emph{KK:147}) ein geeignetes Vorbild für zwergische Architektur.
 
 \subsection{In eine andere Zeit verlegen?}
-Meine Gruppe hat die Dringlichkeit einer Hochkönigwahl selbst hergestellt, indem sie die Botschaft von einer drohenden Orkgefahr nach Finsterkoppen brachte.
-Mit dieser Prämisse lässt das Abenteuer sich problemlos im Zeitraum vom Auftauchen Ashims 1003 bis zum Einfall der Orken ins Svellttal 1010\,BF verschieben
+Unsere Testspiel-Gruppe hat die Dringlichkeit einer Hochkönigwahl selbst hergestellt, indem sie die Botschaft von einer drohenden Orkgefahr nach Finsterkoppen brachte.
+Mit dieser Prämisse lässt sich das Abenteuer problemlos im Zeitraum vom Auftauchen Ashims 1003 bis zum Einfall der Orken ins Svellttal 1010\,BF verschieben
 und etwa mit der Suche nach dem  \textbf{Salamanderstein} (vgl. \emph{Sternenschweif}) verbinden.
 
 Wenn Sie näher an der aventurischen Jetztzeit spielen, sich jedoch eng am aventurischen Kanon orientieren, sitzt der Hochkönig des \fkvs fest im Sattel,
@@ -234,6 +230,7 @@ Als Anführer der Golgrasch-Sippe tritt an Stelle von Bergkönig \textbf{Geramba
 
 Die übrigen Sippen sind vertreten wie folgt:
 \begin{itemize}
+	\label{rat}
 \item \textbf{Bonderik} (schwarzhaariger Zwerg mit knarzender Stimme, legt die Fingerspitzen aneinander)
 \item \textbf{Parsezel Sohn des Pemoin} (Zwerg, spricht aufgeregt, wirft an passenden und unpassenden Stellen ein \enquote{oder?} ein)
 \item \textbf{Rodrik} (ungewöhnlich dicker Zwerg, der gern in ein- und zwei-Wort-Sätzen spricht, klopft sich aufs Knie, wenn er fertig ist)
@@ -254,12 +251,13 @@ Im Gegensatz zu den abergläubisch gefürchteten Geoden kann er aber voraussetze
 
 \kasten{\textbf{Bergkönig oder Hochkönig?}
 	
-	Das ständige Amt, das die Menschen als \enquote{Bergkönig} bezeichnen, ist nicht mit den  Befugnissen ausgestattet, die man gemeinhin für einen König erwartet.
+	Das ständige Amt, das die Menschen als \enquote{\textbf{Bergkönig}} bezeichnen, ist nicht mit den  Befugnissen ausgestattet, die man gemeinhin für einen König erwartet.
 	Es handelt sich eher um einen obersten Friedensrichter des jeweiligen zwergischen Volkes.
-	Gerade im \fkv\ ist seine formale Macht begrenzt -- er ist lediglich Vorsitzender des Tiefen Rates ohne eigenes Stimmrecht. Nur bei Stimmengleichstand obliegt es ihm, den Ausschlag zu geben.
+	Gerade im \fkv\ ist seine formale Macht begrenzt -- er ist lediglich Vorsitzender des Tiefen Rates ohne eigenes Stimmrecht.
+	Nur bei Stimmengleichstand obliegt es ihm, den Ausschlag zu geben.
 	
-	In Zeiten äußerer Gefahr oder großer Not wählen die Zwerge dagegen Hochkönige --
-	formal über die ganze Zwergenheit, wobei gerade das \fkv\ sich schon öfter nicht die Mühe gemacht hat,
+	In Zeiten äußerer Gefahr oder großer Not wählen die Zwerge dagegen \textbf{Hochkönig}e --
+	formal über alle Kinder Angroschs, wobei gerade das \fkv\ sich schon öfter nicht die Mühe gemacht hat,
 	andere Völker in die Wahl einzubeziehen oder die Anerkennung des Hochkönigs von diesen zu verlangen.
 	
 	Vom Hochkönig wird gemeinhin erwartet, dass er sein Amt aufgibt, wenn die Gefahr vorüber ist.
@@ -413,11 +411,12 @@ Er weiß jedoch, dass das \textbf{Szepter der Stärke}, denjenigen wählen wird,
 der ihm etwas Rattengold beigibt und dass dieses Material in der Finsterkopp-Binge zu finden ist.
 }
 
+\subsubsection{Den Ausweg finden}
 Im Anschluss kommt \textbf{Garbalon} auf euch zu:
 \vorlesen{
 \enquote{Ihr habt recht getan, dass Ihr uns die Kunde brachtet. Ich wünschte wirklich, wir wüssten schon, was als nächstes zu tun ist. Aber es scheint, als sei heute kein Weg voran zu finden.}
 
-\emph{Bonderik} mischt sich ein:
+\textbf{Bonderik} mischt sich ein:
 \enquote{Ich bin mir da nicht so sicher. Ich meine mich zu erinnern, dass es zu Zeiten unserer Vorväter auch andere Wege gab, einen Hochkönig zu bestimmen.
 Müsste das nicht im Tempel verzeichnet sein? Mein Angram ist leider seit meiner Jugend nicht besser geworden \dots}}
 
@@ -490,6 +489,8 @@ erfolg={Die Gruppe wird beauftragt, in die Binge hinabzusteigen.
 misserfolg={Verliert die Gruppe das Duell, wird sie wahrscheinlich dennoch in die Binge wollen.
 	Dies sollten Sie auch ermöglichen.
 	
+	\info{Wenn Sie den Eindruck haben, dass Ihrer Gruppe die zwergischen Gebräuche zu bedeutsam erscheinen, um sich darüber hinwegzusetzen, schieben sie ein vertrauliches Gespräch mit \textbf{Borsok} ein, die -- für die Gruppe überraschend -- mehr oder weniger deutlich zu verstehen gibt, dass diese Lösung für alle das Beste wäre, weil gerade durch den Status der Gruppe als Außenseiter der Verstoß nicht so schwer wöge.}
+	
 	Im \emph{zweiten Akt} wird die Gruppe es dann schwerer haben:
 	Ohne die Hinweise des Hohepriesters werden sie am Angrosch-Altar nicht ahnen, dass sie später ein Rätsel zu lösen haben.
 	
@@ -498,7 +499,7 @@ misserfolg={Verliert die Gruppe das Duell, wird sie wahrscheinlich dennoch in di
 ]
 {Rededuell}{Für Menschen kann \emph{ungewohnte Umgebung} angenommen werden.
 \emph{Überreden} und \emph{Rhetorik} sind \emph{angemessene} Talente, ebenso \emph{Einschüchtern} --
-falls die Gruppe die Gier und die Kampfkraft der Orks und nicht etwa die eigene ins Feld führt.
+falls die Gruppe die äußere Bedrohung -- also beispielsweise die Gier und die Kampfkraft der Orks -- und nicht etwa die eigene ins Feld führt.
 Andernfalls wäre es ebenso \emph{unsinnig} wie \emph{Betören}.\\
 Für den tiefen Rat gelten folgende Werte: \emph{Willenskraft} 14, \emph{Menschenkenntnis} 10, MU 12, KL 10.
 }
@@ -521,7 +522,7 @@ Das Schloss des goldenen Tors ist echte Zwergenarbeit und nur mit enormem Aufwan
 \probe{koerperkraft}{DG\,2 (20): Körperkraft, Mechanik}{Ein vor Jahrhunderten vermauerter, weniger repräsentativer Eingang ist hinter einem der Kohlebecken zu entdecken. Er lässt sich mit einfachem Werkzeug
 freilegen und aus den Angeln heben.
 }
-Misslingen führt zu einem Steinschlag (4W6 TP für die würfelnde Figur).
+Misslingt die Probe, führen diese groben Arbeiten zu einem Steinschlag (4W6 TP für die würfelnde Figur).
 
 \spaltenende
 
@@ -558,7 +559,7 @@ Zwar gibt es in fast allen Räumen Fackelhalter oder sogar Ölschalen, die über
 Vereinzelt hat sich Phosphorpilz ausgebreitet, so dass \emph{Sternenlicht (Ilaris:38)} herrscht.
 %Rund um den Feuerschlot ist ab und an ein leichtes Glosen wahrnehmbar. Eine richtige Beleuchtung stellt dieses jedoch nicht dar.
 
-Die gesamte Binge gilt als \emph{enger Raum (Ilaris38)}.
+Die gesamte Binge gilt als \emph{enger Raum (Ilaris:38)}.
 Die meisten Gänge und viele der Räume haben nur 8 Spann Deckenhöhe.
 Hier sind zwerg- oder wühlschratgroße Kämpfende gegenüber größeren stets \emph{vorteilhaft} positioniert.
 Ausnahmen bilden einige der Werkstätten (für Luftzirkulation) und  Tempelräume (aus repräsentativen Gründen).
@@ -647,7 +648,7 @@ Daneben gibt es auch noch Felsnischen.
 In einer davon liegt eine seit Jahrhunderten gespannte Bärenfalle \emph{(Ilaris:63)}.
 Wer nach Beute sucht und eine \emph{Sinnenschärfe-Probe (III, 24, -4} durch jede Stufe \emph{Angepasst (Dunkelheit)}) misslingt, schnappt die Falle zu und Wundfieber (\emph{Ilaris:35}) droht.
 
-Anschließend oder bei gelungener Probe wird ein verzauberter \textbf{Asthenil}-Ring gefunden (\emph{Ilaris:78}: \emph{ladungsbasiert, aufladbar}, eine Ladung, \textsc{Elementarbann} mit \emph{Modifikation Gegenzauber} (\emph{Ilaris:126}), \emph{Erfolgswert} 20).
+Anschließend oder bei gelungener Probe wird ein verzauberter \textbf{Asthenil}-Ring gefunden (\emph{Ilaris:78}: \emph{ladungsbasiert, aufladbar}, eine Ladung, \biglittlecap{Elementarbann} mit \emph{Modifikation Gegenzauber} (\emph{Ilaris:126}), \emph{Erfolgswert} 20).
 Das Artefakt hat einen wahrlich komplexen Auslöser:
 Sobald ein Feuerzauber gegen die tragende Person gesprochen wird, wirkt der Gegenzauber.
 
@@ -721,8 +722,6 @@ Verschiedene künstliche Wasserwege, die die Arbeit einst erleichterten, führen
 Mehrfach passiert die Gruppe \textbf{Kippe}n. Teilweise handelt es sich um taubes Gestein,
 teilweise um Erze der für das \fkv wertlosen Materialien, die der Bosnickel benannt hat.
 
-\neuespalte
-
 \vorlesen{
 Als ihr an einer weiteren Kippe vorbeikommt, glitzern die Erzbrocken im Licht eurer Fackeln verheißungsvoll. Das Gestein scheint von reichlich Gold durchzogen zu sein.
 Ein etwa faustgroßer Brocken direkt zu euren Füßen wirkt, als bestünde er hauptsächlich aus Gold.
@@ -743,26 +742,24 @@ misserfolg={}
 Es muss sich um \textbf{Rattengold} handeln, eines der sogenannten 13 Unmetalle.\\
 	\textbf{20:} Rattengold wird dem \textbf{Namenlosen} zugeordnet. Es heißt, dass Gefolgsleute dieses Gottes nicht mit dem hohen Gewicht zu kämpfen haben.\\
 	\textbf{24:} Wegen seiner Affinität zum Namenlosen ist Besitz und Verarbeitung in zwölfgöttertreuen Landen verboten -- soweit überhaupt bekannt.\\
-	\textbf{24:} Rattengold lässt sich für einige \textbf{Alchemika} verwenden, beispielsweise als potentes Substitut für Gold und Bernstein im \textbf{Bannstaub} \emph{(Ilaris:64)} oder für Zinnober im \textbf{Purpurblitz} (\emph{Ilaris:66}).\\
-	\textbf{28:} Es heißt, dass der \textbf{Kaisertöter} -- eine mythische Klinge, mit der der Kult des Namenlosen Herrscherhäuser stürzt -- aus Rattengold geschmiedet wird.}
+	\textbf{28:} Rattengold lässt sich für einige \textbf{Alchemika} verwenden, beispielsweise als potentes Substitut für Gold und Bernstein im \textbf{Bannstaub} \emph{(Ilaris:64)} oder für Zinnober im \textbf{Purpurblitz} (\emph{Ilaris:66}).\\
+	\textbf{32:} Es heißt, dass der \textbf{Kaisertöter} -- eine mythische Klinge, mit der der Kult des Namenlosen Herrscherhäuser stürzt -- aus Rattengold geschmiedet wird.}
 \spaltenanfang
 
 
 \subsubsection{Die Wühlschrate}
-Eine Sippe von \textbf{Wühlschraten} hat sich aus der Tiefe auf die Höhe der Zwergentunnel vorgearbeitet.
-Insbesondere einer Gruppe noch recht junger Schrate hat dabei auch die Tunnel beschädigt.
-Keiner von ihnen ist über einen Schritt groß, so dass die Löcher zu klein sind, als dass Spielfiguren ihnen folgen könnten.
+Eine Sippe \textbf{Wühlschrate} hat sich aus der Tiefe auf die Höhe der zwergischen Tunnel vorgearbeitet.
+Insbesondere einige junge Schrate haben diese dabei auch beschädigt.
+Unter ihnen ist niemand über einen Schritt groß -- die Löcher sind so klein, dass Spielfiguren ihnen nicht folgen können.
 
-\paragraph{\textbf{Wie ein Sembelquast}}
-
-Ab der zweiten Ebene gibt es in einigen Tunneln Löcher in Boden, Decken und Wänden und Beschädigungen am Stützwerk.
-Mit einer Probe auf \emph{Wachsamkeit} (III, 24, +4 für \emph{Vorteil: Gefahreninstinkt} und jede Stufe \emph{Angepasst (Dunkelheit)}, -8, falls keine Lichtquelle zur Verfügung steht),
-lässt sich der Gefahr jeweils entgehen.
-Den Weg anschließend fortzusetzen erfordert zusätzlich eine GE-\emph{Probe} (I, 12).
+\textbf{Wie ein Sembelquast}\\
+Ab der zweiten Ebene gibt es in Tunneln Löcher in Boden, Decken und Wänden und Beschädigungen am Stützwerk.
+\probe{wahrnehmung}{Wachsamkeit (24)}{\emph{-4 für Vorteil: Gefahreninstinkt und jede Stufe Angepasst (Dunkelheit), +8, falls keine Lichtquelle zur Verfügung steht}\\\mbox{}\\um der Gefahr zu entgehen.}
+\probe{gewandtheit}{Gewandtheit (I, 12)}{um anschließend den Weg fortzusetzen.}
 Schlägt eine der beiden Proben fehl, kommt es zu Einstürzen oder Einbrüchen in den löchrigen Boden mit jeweils 2W6+4 SP.
+\bigskip
 
-\paragraph{\textbf{Angriffe aus dem Dunkeln}}
-
+\textbf{Angriffe aus dem Dunkeln}\\
 Die Schrate empfinden die Gruppe als Eindringlinge.
 Insbesondere die Lichtquellen flößen ihnen Angst ein.
 Gleichzeitig vermuten sie, dass ohne das Licht der Aufenthalt für die Gruppe sehr viel ungemütlicher wird.
@@ -770,7 +767,7 @@ Sie sind intelligent genug, Lichtquellen zu identifizieren und ein Bündel Facke
 
 Durch ihre Ortskenntnis und die von ihnen gegrabenen Gänge können die Wühlschrate in unbeachteten Momenten immer wieder zuschlagen.
 
-\info{Spielen Sie die Schrate als eine Jugendbande, die ihr Zuhause zu verteidigen versucht:
+\info{Spielen Sie die Schrate als Jugendbande, die ihr Zuhause zu verteidigen versucht:
 Ihre Versuche, die Gruppe zu behindern, sind eher Streiche.} Beispielsweise schieben sie im Dunkeln eine Lore an, so dass sie quietschend im Lichtkreis der Fackeln zu stehen kommt.
 Nutzt die Gruppe trotz dieser unheimlichen Situation die Gelegenheit zu einer Fahrt, nimmt die Lore auf der abschüssigen Strecke beachtliche Geschwindigkeit auf.
 Das von den Schraten durchbissene Gleis sorgt schließlich für ein schepperndes Ende und 2W6+4~SP.
@@ -796,7 +793,7 @@ Selbst ein Käfig aus Stein oder Metall stellt für das Gebiss eines Wühlschrat
 
 
 
-\subsubsection{Das Rätsel}
+\subsection{Das Rätsel}
 \vorlesen{Als ihr die nächste Höhle betretet, entdeckt ihr an deren anderen Ende auf den ersten Blick das Ziel eurer Suche.
 Von dem dreiflügligen Portal trennt euch eine breite Schlucht.
 Zwar wölbt sich die mit vereinzelten Stalaktiten behangene Decke lediglich einige Schritt über euch. Jedoch geht es mindestes fünfundzwanzig Schritt in die Tiefe.
@@ -813,11 +810,12 @@ Ihre Oberfläche wurde abgeschliffen und poliert. Auf diesem Weg könnt ihr auf 
 Was von fern wie ein dreiflügliges Tor gewirkt hat, erweist sich aus der Nähe als schmales Portal.
 Rechts und links sind einige \textbf{Rogolan}-Runen-Bänder zu erkennen, die jeweils eine Rune wiederholen.
 Rechts unten endet ein Band in einem Amboss-Symbol.
-Der Öffnungsmechanismus befindet sich in der Mitte: Drei Räder sind so in das Portal eingelassen, dass sie jeweils eine Rogolan-Rune zeigen. Sie lassen sich drehen; das gesamte zwergische Alfabet ist auf ihnen dargestellt.
+Der Öffnungsmechanismus befindet sich in der Mitte: Drei drehbare Räder sind so in das Portal eingelassen, dass sie jeweils eine Rogolan-Rune zeigen. Sie lassen sich nach Art eines Zahlenschlosses drehen, wobei das gesamte Rogolan-Alphabet zur Auswahl steht.
 Darüber ist ein reich verzierter, aber glatter und spitz zulaufender Hebel.
 
 \info{
-Geben Sie Ihrer Gruppe nun das Rätsel auf den folgenden Seiten (Lizenzhinweise auf der letzten Seite). Ich empfehle, es auf zwei verschiedenen Seite auszudrucken, auszuschneiden und passgenau aufeinander zu kleben -- doppelseitiger Ausdruck gibt leider ein verschobenes Ergebnis.
+Geben Sie Ihrer Gruppe nun das Rätsel auf den folgenden Seiten (Lizenzhinweise auf S.\pageref{lizenz}).
+Ich empfehle, es auf zwei verschiedenen Seite auszudrucken, auszuschneiden und passgenau aufeinander zu kleben -- doppelseitiger Ausdruck gibt leider ein verschobenes Ergebnis.
 Legen Sie das resultierende Blatt möglichst flach auf den Tisch. Die Entdeckung der Rückseite soll schon den ersten Aha-Effekt darstellen:}
 \probe{wahrnehmung}{Sinnenschärfe (16)}{\emph{Gruppenprobe, Zusammenarbeit möglich.}\\Als ihr den Stein betastet entdeckt ihr, dass die Runenbänder rechts und links jeweils in vier etwa gleich hohe Paneele geteilt sind. Sie lassen sich nach vorne klappen. Auch ihre Rückseiten sind mit Runen gezeichnet.}
 
@@ -876,8 +874,9 @@ Dieser \textbf{Schlot} kommt in Sicht, als ihr die Statue umrundet. Doch das feu
 Eine \link{https://ilaris-online.de/app/kreatur/175}{Riesenamöbe} (\emph{Ilaris:105}) muss durch ein von den Wühlschraten gegrabenes Loch ihren Weg in die Gruft gefunden haben.
 Zu den Dingen, die sie sich hier einverleibt hat, gehört ausgerechnet das Szepter!
 
-\kreaturriesenamoebe
+\info{Die angegebenen Kampfwerte setzen voraus, dass die Gruppe durch die vorhergehenden Strapazen und Fallen schon einige \textit{Einschränkungen} aufweisen. Für eine ausgeruhte Gruppe ist die Amöbe kein ernst zu nehmender Gegner. Setzen Sie in diesem Fall die Werte für ein besonders gefährliches Exemplar ruhig ein wenig hinauf.}
 
+\kreaturriesenamoebe
 
 Nach dem Kampf kann die Gruppe dieses bergen. Es besteht hauptsächlich aus \textbf{Asthenil}, mit Applikationen aus \textbf{Toschkril} und \textbf{Zwergengold}.
 Ein großer \textbf{Serpentin} ist an zentraler Stelle eingebettet.
@@ -909,31 +908,36 @@ Weitere Geheimnisse mögen sich hier verbergen, doch sind sie nicht Teil dieses 
 \spaltenanfang
 \subsection{Der Rückweg}
 \label{zuruck}
-\vorlesen{Als ihr das \textbf{Rattengold} passiert, fällt euch auf, dass der Brocken von der Mitte des Gangs verschwunden ist. Als ihr euch umseht, findet ihr stattdessen einen handtellergroßen goldenen \textbf{Knopf} von zwergischer Machart.}
+\vorlesen{Als ihr das \textbf{Rattengold} passiert, fällt euch auf, dass der Brocken von der Mitte des Gangs verschwunden ist. Ihr seht euch um und findet stattdessen einen handtellergroßen goldenen \textbf{Knopf} von zwergischer Machart.}
 
 \kasten{\textbf{Bonderik} ist ein Schurke, aber kein Anhänger des Namenlosen. Der Brocken ist auch für ihn sehr schwer und er hat sich beim Einpacken den Knopf abgerissen.}
 
-Der natürliche Anlaufpunkt nach dem Fund des Szepters ist wiederum Inradon \textbf{Xermosch}.
+Der natürliche Anlaufpunkt nach dem Fund des Szepters ist wieder Inradon \textbf{Xermosch}.
 Für den nächsten Feuertag wird das Ritual angesetzt, das Szepter neu zu schmieden.
 \subsection{Die Zeremonie}
 \info{Stimmen Sie mit der Gruppe ab, von wo diese das Ritual miterleben wollen:
 	Angroschgläubigen Figuren können daran mitzuwirken.
-	Andere können ehrenhalber einen der begehrten Plätze im Tempel einnehmen. Wer sich irgendwann dem Vertrauen des \fkvs als unwürdig erwiesen hat, wird wohl in der Halle ganz hinten stehen müssen -- ein interessanter Ausgangspunkt für die \emph{Verfolgungsjagd}.}
+	Andere können ehrenhalber einen der begehrten Plätze im Tempel einnehmen. Wer sich irgendwann des Vertrauens des \fkvs als unwürdig erwiesen hat, wird wohl in der Halle ganz hinten stehen müssen -- ein interessanter Ausgangspunkt für die \emph{Verfolgungsjagd}.}
 \vorlesen{%
-Im Tempel ist jeder Platz besetzt. Auch in der großen Versammlungshalle sind hunderte, wenn nicht tausende Zwerge in ihren schönsten Kettenhemden zusammengekommen. Dicht gedrängt, murmeln sie seit Stunden gemeinsam Gebete in monotonem Singsang. Schließlich ist der große Moment da: Auf ein Zeichen von Inradon \textbf{Xermosch}, der im Portal des Tempels steht, werden Pauken und Ambosse geschlagen und unter einzelnen, tiefen Posaunenstößen wird das Szepter von einer Prozession in den Tempel gebracht.
+Im Tempel ist jeder Platz besetzt. Auch in der großen Versammlungshalle sind hunderte, wenn nicht tausende Zwerginnen und Zwerge in ihren schönsten Kettenhemden zusammengekommen. Dicht gedrängt, murmeln sie seit Stunden gemeinsam Gebete in monotonem Singsang. Schließlich ist der große Moment da: Auf ein Zeichen von Inradon \textbf{Xermosch}, der im Portal des Tempels steht, werden Pauken und Ambosse geschlagen und unter einzelnen, tiefen Posaunenstößen wird das Szepter von einer Prozession in den Tempel getragen.
 
 Dort ist ein Muffelofen aufgebaut worden, in dem die Metalle geläutert werden sollen.
 Zahlreiche Beteiligte gehen dem Hohepriester zur Hand, darunter alle \textbf{Angrosch}-Geweihten des Finsterkamms und die meisten Mitglieder des \textbf{Tiefen Rats}. In jahrtausendealten steinernen Schalen fangen sie die geschmolzenen Metalle.
-Der Inradon, den Serpentin in Händen, leitet sie zum großen Altar-Amboss. Danach greift er zum Hammer: \enquote{Mit den Schlägen dieses Werkzeugs werden wir unsere Zukunft in deine Hände legen, oh einziger Gott unseres Volkes.}
+Der Inradon, den Serpentin in Händen, leitet sie zum großen Altar-Amboss. Danach greift er zum Hammer: \enquote{Mit diesen Schlägen werden wir unsere Zukunft in deine Hände legen, oh einziger Gott unseres Volkes.}
 }
+
 \subsubsection{Die Enttarnung des Bösewichts}
-\probe{Wahrnehmung}{Wachsamkeit (16)}{\emph{keine Zusammenarbeit möglich.} Einer mitschmiedenden Figur fällt auf, dass das geschmolzene Zwergengold in einer der Schalen in Bewegung gerät. Wer weiter entfernt steht, bemerkt stattdessen, dass die Knöpfe an Bonderiks Robe dem gefundenen gleichen.}
-Bei genauerem Hinsehen lässt sich entdecken, dass an Bonderiks Ärmel ein Knopf fehlt. Sobald sich ein Gruppenmitglied bemerkbar macht, erfasst Unruhe die Mitbetenden und setzt sich in der Menge fort, auch wenn die Ursache von den Wenigsten verstanden wird. \textbf{Xermosch} unterbricht das Ritual, um die Details zu erfragen.
+
+\probe{Wahrnehmung}{Wachsamkeit (16)}{\emph{keine Zusammenarbeit möglich.} Einer mitschmiedenden Figur fällt auf, dass das geschmolzene Zwergengold in einer der Schalen in Bewegung gerät.}
+
+\kasten{Wer weiter entfernt steht oder bewusst versucht, den Knopf zuzuordnen, bemerkt mit derselben Probenschwierigkeit, dass die Knöpfe an Bonderiks Robe dem gefundenen gleichen.}
+
+Genaueres Hinsehen zeigt, dass an Bonderiks Ärmel ein Knopf fehlt. Sobald sich ein Gruppenmitglied bemerkbar macht, erfasst Unruhe die Mitbetenden und setzt sich in der Menge fort, auch wenn die Ursache von den Wenigsten verstanden wird. \textbf{Xermosch} unterbricht das Ritual, um die Details zu erfragen.
 \textbf{Bonderik} gerät nicht aus der Ruhe, tritt aber den Rückzug an.
 
 Nun kann eine \emph{Verfolgungsjagd} (\emph{Ilaris:57}, DG\,3) beginnen:\\
 In der dicht stehenden Menge ist die Grund-GS 1. \emph{Laufen} wäre \emph{langsam}.
-Bonderik drängelt sich also durch die Menge und probt auf \emph{Körperkraft}, PW\,12, um \emph{schnell} voranzukommen. Er versucht, in die Hallen seiner Sippe zu gelangen und den verräterischen Rock los zu werden.
+Bonderik drängelt sich also durch die Menge und probt auf \emph{Körperkraft}, PW\,12, um \emph{schnell} voranzukommen. Er versucht, in die Hallen seiner Sippe zu gelangen und den verräterischen Rock loszuwerden.
 
 Wer ihn verfolgt, kann ebenfalls \emph{KK} einsetzen, oder sich mit \emph{Akrobatik} über die Schultern (darüber einigermaßen empörter) Zwerg*innen bewegen. Die Grund-GS beträgt dann 4. Diesmal ist auch möglich, stattdessen die Menge auseinander zu treiben und den EW einer Probe auf \emph{Anführen} oder \emph{Einschüchtern} der Geschwindigkeit zuzuschlagen.\\
 Wird die Verfolgungsjagd gewonnen, ist der Bösewicht gestellt und kann beschuldigt werden.
@@ -943,9 +947,9 @@ Nach dessen Krönung wird \textbf{Bonderik} unzufriedene Zwerge um sich scharen 
 Wenn die Gruppe die Manipulation nicht entdeckt, dann erleben sie eben ein einzigartiges Ritual mit, an dessen Ende \textbf{Bonderik} zum Hochkönig gewählt wird.
 Entkommt er bei der Verfolgungsjagd, so fehlt ein Stück der Indizienkette und es ist die Gruppe, die wegen der Störung des Rituals von der restlichen Zeremonie ausgeschlossen wird.
 Haben sie zuvor das Vertrauen des Inradon gewonnen, so wird dieser dennoch sicherheitshalber von vorn beginnen.
-\abschnitt{Abgesang}
+\subsection{Abgesang}
 Für die Krönung wird auch \textbf{Gerambolosch} wieder hereingetragen.
-Als die Krone das Haupt des neuen Hochkönigs berührt, erwacht der Bergkönig ein letztes Mal. (\enquote{Ich kehre aus dem Labyrinth meiner Träume zurück.}) Je nachdem segnet er seinen Sohn oder prophezeit dem Verräter Unglück.
+Als die Krone das Haupt des neuen Hochkönigs berührt, erwacht der Bergkönig. (\enquote{Ich kehre aus dem Labyrinth meiner Träume zurück.}) Je nachdem segnet er seinen Sohn oder prophezeit dem Verräter Unglück.
 \info{Eine hervorragende Gelegenheit für Sie, durch den Mund des greisen Königs eine Prophezeiung hinzuzufügen, die ihre Gruppe ins nächste Abenteuer führt.}
 Dann schließt er die Augen für immer.
 
@@ -958,7 +962,7 @@ Dann schließt er die Augen für immer.
 
 \subsection{Finsterkoppen als Abenteuer\-schauplatz}
 
-Das \fkv siedelt seit 3.000 Jahren im \textbf{Finsterkamm}; dies dürften in den meisten Familien rund 15 Generationen sein.
+Das \fkv siedelt seit 3.000 Jahren im \textbf{Finsterkamm}; dies dürften in den meisten Familien rund 15~Generationen sein.
 
 \subsubsection{Großling, sei auf der Hut}
 Menschen sind in der Stadt \textbf{Finsterkoppen} äußerst selten zu Gast. Zwar unterhält das \fkv regen Handel über \textbf{Lowangen} und \textbf{Gashok}.
@@ -1036,19 +1040,23 @@ An den Hängen der umliegenden Berge grasen \textbf{Ponys}, die unter Tage Masch
 
 \subsubsection{Weitere wichtige Bewohner}
 
-Die Beschreibung der Mitglieder des \textbf{Tiefen Rats} finden Sie im ersten Akt. 
+Die Beschreibung der Mitglieder des \textbf{Tiefen Rat}s finden Sie im \emph{ersten Akt} auf S.\,\pageref{rat}. 
 
-\paragraph{\textbf{Muragolosch}}
+\bigskip
+
+\textbf{Muragolosch}
 
 Der Schüler \textbf{Turgol}s schlägt im Wesen nicht nach dem gutmütigen Sumudiener, sondern hat sich dem Element Eis zugewandt.
 Seit Jahrzehnten wächst seine Verachtung für andere Völker.
 Er ist einer der wenigen Vertrauten \textbf{Bonderik}s und vergiftet in seinem Auftrag Bergkönig \textbf{Gerambolosch} in seinen (beklagenswerten, aber beschwiegenen) Zustand.
 
-Falls die Gruppe auf diese Spur stößt, kann \textbf{Muragolosch} eine größere Rolle spielen. Im unwahrscheinlichen Fall eines Kampfes gegen \textbf{Bonderik} kann er als Joker eingreifen und diesen mit Zaubern wie \textsc{Weg durch Sumus Leib} in Sicherheit bringen.
+Falls die Gruppe auf diese Spur stößt, kann \textbf{Muragolosch} eine größere Rolle spielen. Im unwahrscheinlichen Fall eines Kampfes gegen \textbf{Bonderik} kann er als Joker eingreifen und diesen mit Zaubern wie \biglittlecap{Weg durch Sumus Leib} in Sicherheit bringen.
 
-\paragraph{\textbf{Arglescha Tochter der Angrarda}}
+\bigskip
 
-Die Tochter \textbf{Garbalon}s ist erst ein halbes Jahrhundert alt, gilt aber dennoch schon jetzt als eine der besten Kämpferinnen im \fkv.
+\textbf{Arglescha Tochter der Angrarda}
+
+Die Tochter \textbf{Garbalon}s ist erst ein halbes Jahrhundert alt, gilt aber dennoch schon jetzt als eine der besten Kämpferinnen im \fkv\.
 Jüngst zeigt sie Interesse, auch ihre Fähigkeiten als Anführerin auszubauen -- ein Vorhaben, das durch die Wahl ihres Vaters zum Bergkönig noch plausibler wird.
 
 Arglescha eignet sich hervorragend als romantisches Interesse für einen Zwergenkavalier als Spielerfigur.
@@ -1057,19 +1065,19 @@ Arglescha eignet sich hervorragend als romantisches Interesse für einen Zwergen
 
 \spaltenende
 \newpage
-\subsection{Beispiel-Charaktere}
-\paragraph{Graboxa, Zwergische Angrosch-Geweihte, Hüterin der Wacht}
-\paragraph{Dascha, Gjalsker Tierkriegerin}
-\paragraph{Jasinthe, Garether Gelehrte}
-\paragraph{Odir Sensendengler, Abenteurer und Pferdedieb}
-\subsubsection{Szenen/Eigenheiten-Tabelle}
+%\subsection{Beispiel-Charaktere}
+%\paragraph{Graboxa, Zwergische Angrosch-Geweihte, Hüterin der Wacht}
+%\paragraph{Dascha, Gjalsker Tierkriegerin}
+%\paragraph{Jasinthe, Garether Gelehrte}
+%\paragraph{Odir Sensendengler, Abenteurer und Pferdedieb}
+\subsection{Szenen/Eigenheiten-Tabelle}
 Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welcher Szene \emph{das Leben schwer machen} \emph{(Ilaris:15)} können, um Schicksalspunkte zu verteilen:
 
 \begin{tabularx}{0.98\linewidth}{l|XXX}
 	&\tkopf{Der Tiefe Rat} & \tkopf{Die Finsterkopp-Binge}&\tkopf{Das Szepter}\\
 	\hline
 	
-	\textbf{Graboxa}&\textbf{Alter bringt Weisheit}\newline Dascha könnte sich einer im Rat geäußerten Meinung einfach deswegen anschließen, weil sie von einer deutlich älteren Person kommt. Bieten Sie einen Schicksalspunkt, wenn daraus Spannungen mit der Gruppe entstehen.
+	\textbf{Graboxa}&\textbf{Alter bringt Weisheit}\newline Graboxa könnte sich einer im Rat geäußerten Meinung einfach deswegen anschließen, weil sie von einer deutlich älteren Person kommt. Bieten Sie einen Schicksalspunkt, wenn daraus Spannungen mit der Gruppe entstehen.
 	&\textbf{Für Angrosch!}\newline Graboxa empfindet unmittelbar den Frevel, die Artefakte nicht wieder in die zugehörigen Nischen zu legen. Gönnen Sie ihr einen Schicksalspunkt, wenn sie die anderen davon überzeugt, auf diese handfeste Belohnung zu verzichten.
 	& \textbf{Drachendiener überall}\newline Warum hat der Hohepriester beim Gebet die Einzigkeit des Gottes so betont? Und warum hat er ihn nicht beim Namen genannt?? Eine vorübergehende Verwirrung kurz vor Schluss darüber, wer hier (eigentlich) alles Übles im Schilde führt, gibt einen Schicksalspunkt.\\
 	
@@ -1085,24 +1093,14 @@ Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welche
 \neueseite
 
 \handout
-
-
-% CHARKTERE
-\neueseite
-% \includepdf[pages=-,addtotoc={1,section,1,Dascha,sc1}]{bergkoenig/pdf/dascha.pdf}
-% \includepdf[pages=-,addtotoc={1,section,1,Jasinthe,sc1}]{bergkoenig/pdf/jasinthe.pdf}
-% \includepdf[pages=-,addtotoc={1,section,1,Odir Sensendengler,sc1}]{bergkoenig/pdf/odir_sensendengler.pdf}
-% \includepdf[pages=-,addtotoc={1,section,1,Graboxa,sc1}]{bergkoenig/pdf/graboxa.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Beispielcharaktere,hdbscs}]{bergkoenig/pdf/dascha.pdf}
-\includepdf[pages=-]{bergkoenig/pdf/jasinthe.pdf}
-\includepdf[pages=-]{bergkoenig/pdf/odir_sensendengler.pdf}
-\includepdf[pages=-]{bergkoenig/pdf/graboxa.pdf}
-
-\neueseite
-
+\subsection{Das Relief hinter dem Angrosch-Altar}
 %Lösung: D G M
 \label{karten}
+\mbox{}
+
 \begin{center}
+	\bigskip
+	\vfill
 	\includegraphics[width=0.5\textwidth]{ngrsch.png}
 \end{center}
 
@@ -1118,7 +1116,7 @@ Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welche
 			\end{center} \neuespalte \mbox{ } \begin{tabularx}{1.5cm}{|X|}
 				\amboss \leer \leer \leer
 				\hline \end{tabularx} \end{multicols}
-	}\bigskip
+	}\vfill
 	
 	\karte{
 		\begin{multicols}{3}\mbox{ }\linebreak \begin{tabularx}{1.5cm}{|X|}
@@ -1249,14 +1247,12 @@ Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welche
 \vfill
 \footnotesize
 \textbf{Lizenzhinweise:}
+\label{lizenz}
+\bigskip
 
 Rogolan-Font von Thorsten Most auf Basis der Spielhilfe \enquote{Angroschs Kinder}.
 
-Ambosssymbole: Anvil Impact SVG Vector von game-icons.net unter der CC Attribution License.
+Ambosssymbole: Anvil Impact von Lorc, \href{https://game-icons.net/1x1/lorc/anvil-impact.html}{game-icons.net} unter der \href{https://creativecommons.org/licenses/by/3.0/}{CC BY 3.0-Lizenz}.
 
-Hebel-Symbol von game-icons.net unter der CC Attribution License
+Hebel-Symbol: Lever icon von Lorc, \href{https://game-icons.net/1x1/lorc/lever.html}{game-icons.net}{CC BY 3.0-Lizenz}.
 \normalsize
-
-
-\neueseite
-\mithintergrund
