--- a/band_02/spielhilfen/spielhilfen.tex
+++ b/band_02/spielhilfen/spielhilfen.tex
@@ -1,1 +1,71 @@
+\credit{Autor}{Alrik Normalpaktierer}
+\spaltenanfang
+Im \link{https://dsaforum.de/app.php/dlext/details?df_id=416}{ersten Band der Chroniken von Ilaris}
+hatten wir neben neuen Spielhilfen (wie der ersten Version der Manöverkarten, einigen Tipps zum Abenteuervorbereiten, \dots) auch einen Überblick über kostenfreien Spielhilfen zusammengestellt, die den Einstieg in Ilaris vereinfachen.
+Diese Übersicht ist immer noch hilfreich, aber vom Stand Früh\-som\-mer 2022.
+Da die Entwicklung vieler Projekte weitergelaufen ist, nicht mehr in allen Punkten aktuell.
+Inzwischen bietet \link{https://ilaris-online.de/app/inhalte/}{Ilaris Online} eine vollständige Liste, filter- und sortierbar nach Kategorien. Damit ergänzt die Website das Angebot des gesamten Ilaris-Regelwerks als Datenbank.
 
+Im Folgenden wollen wir einige ausgewählte Spielhilfen detaillierter vorstellen.
+
+\subsection*{Generierungsprogramm Sephrasto}
+\link{https://github.com/Aeolitus/Sephrasto/releases}{Sephrasto} hat in den letzten Jahren erneut eine deutliche Weiterentwicklung durchlaufen und liegt inzwischen in der Version 5 vor.
+
+\begin{itemize}
+\item Vollumfassende regelkonforme Charaktererstellung und -steigerung mit zahlreichen Hilfestellungen
+\item 	Assistent für die Erstellung neuer Charaktere
+\item	Speichermöglichkeit und PDF-Export
+\item	Automatisch erstellter PDF-Anhang mit allen für den Charakter relevanten Regeln
+\item	Vier verschiedene Charakterbögen zur Auswahl, auch eigene sind möglich
+\item	Umfassende Unterstützung für Hausregeln durch einen ins Programm integrierten Datenbankeditor. Hausregeln können so auch einfach gespeichert und geteilt werden.
+\item	Sephrasto unterstützt Plugins. Sie lassen sich aus dem Programm heraus installieren und (de-)aktivieren.
+Zahlreiche von der Community erstellte Plugins -- z.\,B. das Manöverkarten-Tool (s.\,u.) und ein Exporter für Foundry-VTT -- stehen zur Verfügung.
+\item	Grafische Darstellung über Schriftarten und -größen und Themes leicht anpassbar
+\item	In-App-Hilfe
+\end{itemize}
+
+\zeichnung[0.8\columnwidth]{Curthan2.jpg}
+
+
+
+\subsection*{Manöverkarten}
+Eines der Plugins erlaubt, einen Satz Manöverkarten passend zur jeweiligen Figur zu erstellen.
+Dazu gehören die verfügbaren Manöver im Kampf und praktische Regelübersichten.
+Auch der Regeltext aller Zauber und Liturgien liegen dabei auf jeweils einer Karte mit sprechenden Symbolen vor.
+So erhältst du bereits mit dem Erstellen deines Charakterbogens deine Optionen im Spiel druckfertig in übersichtlicher Form.
+
+\subsection*{Kreaturendatenbank}
+Auch die \link{https://ilaris-tools.github.io/IlarisDB/db/kreaturen/}{Kreaturen\-datenbank} wurde erheblich weiterentwickelt.
+Sie umfasst neben allen Kreaturen des Regelwerks inzwischen auch viele Gegner und NSCs, die andere Spielleitungen in ihrer Vorbereitung erstellt haben.
+Spielwerte stehen so als Konvertierungen für Abenteuer anderer Regeleditionen zur Verfügung.
+
+Angemeldete Nutzende können selbst Kreaturen eintragen und sie für FoundryVTT oder als LaTeX- oder als Brauerei-Code (s.\,u.) im Format einer Manöverkarte exportieren.
+
+%In der Ausarbeitung eigener Szenarien oder der Vorbereitung des Spielabends ist die stets überarbeitete Spielleitung für folgende Hilfestellungen dankbar:
+%
+%\tabelle{p{1.9cm}|p{1cm} X X X}{
+%	
+%	\tkopf{Spielhilfe} & \tkopf{von} & \tkopf{Was ist das?} &\tkopf{Wobei hilft es?}  \\
+%	\hline
+%	
+%	\link{https://ilaris-tools.github.io/IlarisDB/db/kreaturen/}{Kreaturen\-datenbank}&Lukas Ruhe&Eine Datenbank mit den Spielwerten aus dem Bestiarium und vielen Hausregeln.&Schnell Spielwerte nachzuschlagen und zu kopieren.\\
+%	%		\item CharakterToText
+%	
+%	\hline
+%}
+
+\subsection*{Layout: Die Brauerei}
+
+
+%\tabelle{p{3cm}|p{2.5cm} X }{
+%	\tkopf{Spielhilfe} & \tkopf{von} & \tkopf{Was ist das?} \\
+%	\hline
+%	
+%\link{https://github.com/Ilaris-Tools/IlarisTex}{IlarisTex}&Lukas Ruhe&\LaTeX-Klasse, die zahlreiche Gestaltungselemente zur Verfügung stellt.\\
+%
+%\link{https://www.dropbox.com/sh/xs1w5r4rq3m0a99/AAB2MGJvEr0O8uxG4_9USVpQa?dl=0}{Ilaris-Artwork}&Bernhard Eisner&Symbole und Illustrationen aus dem Ilaris-Regelbuch.\\
+%
+%\link{https://webzine.nandurion.de/2013/10/15/dsa-schriftartenpaket-stand-022011/}{Schriftarten-Paket}&Salaza&Digitale Fonts für verschiedene aventurische Schriften.\\
+%\hline
+%}
+\spaltenende
